Сделать правки первого этапа диплома
1. Добавить dependencyManagement в корневой pom.
2. Распределить зависимости по модулям.
3. Передавать HttpServletRequest в параметры метода createHit.
4. Изменить тип возвращаемого значения метода createHit на void.
5. Изменить тип возвращаемого значения метода getStats на ViewStatsDto.
6. Не делать маппинг в контроллере.
7. Повысить производительность метода getStats.
8. Изменить методы репозитория статистики для повышения производительности.